--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -2,6 +2,7 @@
 @media (max-width: 75em) {
   .main-section {
     gap: 4.9rem;
+    margin: 11.8rem 0rem;
   }
 
   .header-section {
@@ -10,9 +11,12 @@
     justify-content: center;
     align-items: center;
     gap: 3.9rem;
+    width: 100vw;
   }
 
   .review {
+    width: 80vw;
+
     &__title {
       font-size: 4rem;
       margin-bottom: 1.7rem;
@@ -29,7 +33,7 @@
     align-items: center;
     width: 32.7rem;
     gap: 1.5rem;
-    padding: 1.5rem 7.6rem 1.5rem 6.6rem;
+    padding: 1.5rem 0 1.5rem 0;
 
     &:nth-child(2) {
       margin-left: 0;
@@ -44,11 +48,16 @@
     flex-direction: column;
     align-items: center;
     gap: 1.6rem;
+
+    &__text {
+      padding: 0 3rem;
+    }
   }
 
   .author {
-    width: 40rem;
+    width: 90vw;
     height: 20rem;
+    padding: 4rem 0rem 1.7rem 0rem;
 
     &:nth-child(2) {
       margin-top: 0;
@@ -59,6 +68,7 @@
     }
 
     &__container {
+      margin-left: 3rem;
       margin-bottom: 2.3rem;
     }
   }
