--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     gap: 3.9rem;
+    // to center the element inside the main tag
     width: 100vw;
   }
 
@@ -31,7 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 32.7rem;
+    width: 75vw;
     gap: 1.5rem;
     padding: 1.5rem 0 1.5rem 0;
 
@@ -51,13 +52,13 @@
 
     &__text {
       padding: 0 3rem;
+      line-height: 1.5;
     }
   }
 
   .author {
-    width: 90vw;
-    height: 20rem;
-    padding: 4rem 0rem 1.7rem 0rem;
+    width: 75vw;
+    padding: 4rem 0rem 0rem 0rem;
 
     &:nth-child(2) {
       margin-top: 0;
@@ -65,6 +66,14 @@
 
     &:nth-child(3) {
       margin-top: 0;
+    }
+
+    &__name {
+      font-size: 1.6rem;
+    }
+
+    &__state {
+      font-size: 1.3rem;
     }
 
     &__container {
